Fixed aligning for Additional Comments Header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -178,10 +178,9 @@
 }
 
 .comment-box {
-  width: 90%;
+  width: 100%;
   padding: 0.5rem;
   border-radius: 8px;
-  border: 1px solid #ccc;
   margin-top: 0.3rem;
   margin-bottom: 0.3rem;
 }
